# order

./: README.md  package.json  turbo.json
apps/docs/: package.json
apps/order-desktop/: .cta.json  index.html  package.json
apps/order-desktop/src/: main.tsx  routeTree.gen.ts
apps/order-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/order-desktop/src-tauri/capabilities/: default.json
apps/order-desktop/src-tauri/src/: lib.rs
apps/order-desktop/src/components/: Header.tsx  OrderClipboardPaste.tsx  OrderDataEdit.tsx  OrderPasteInput.tsx
apps/order-desktop/src/lib/: clipboardParser.ts  columnMapper.ts  dataTransformer.ts  dataValidator.ts  pdfGenerator.ts  qualtrics.ts
apps/order-desktop/src/lib/tauri-store/: appState.ts  context.ts  hooks.ts
apps/order-desktop/src/routes/: __root.tsx  index.tsx  setup.tsx
apps/tsr-web/: .cta.json  README.md  index.html  package.json
apps/tsr-web/src-tauri/: tauri.conf.json
apps/web/: package.json
tasks/: prd-order-list-clipboard-to-pdf.md  tasks-prd-order-list-clipboard-to-pdf.md
