[package]
name = "order"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jason Antwi-Appah <hey@jasonaa.me>"]
license = "Apache License"
repository = "https://github.com/jasonappah/order.git"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "^0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.6.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-store = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-shell = "2"
